hphp/hack/test/typecheck/array/safe_vector_array/varray_with_array_filter_does_not_return_dict_like_array.php.exp
File "varray_with_array_filter_does_not_return_dict_like_array.php", line 4, characters 10-57:
Invalid return type (Typing[4110])
File "varray_with_array_filter_does_not_return_dict_like_array.php", line 3, characters 35-49:
This is an array (used like a hashtable)
File "varray_with_array_filter_does_not_return_dict_like_array.php", line 4, characters 23-43:
It is incompatible with an array (used like a vector)
