hphp/hack/test/typecheck/array/safe_vector_array/varray_with_array_filter_does_not_return_dict_like_array.php
<?hh // partial

function providesDictLikeArray(): darray<int, int> {
  return array_filter(varray[1, 2, 3, 4, 5], $x ==> true);
}
